--- a/parroquiaproject/sitio/templates/check_post.html
+++ b/parroquiaproject/sitio/templates/check_post.html
@@ -60,8 +60,8 @@
                 {% if post.editor %}
                   <p class="mb-1"><strong>Editor:</strong> {{ post.editor.email }} ({{ post.editor.username }})</p>
                 {% endif %}
-                <div class="mb-2" style="max-height: 200px; overflow-y: auto;">
-                  <p class="mb-1 text-break" style="text-align: justify">
+                <div class="mt-0 mb-2" style="height: 165px; width: 400px;; overflow-y: auto; padding: 6px; border-radius: 6px; background: #d4cfbc;">
+                  <p class="text-break" style="text-align: justify">
                     {% if post.descripcion_editada %}
                       {{ post.descripcion_editada }}
                     {% else %}
@@ -172,8 +172,8 @@
               {% if post.editor %}
                 <p class="mb-1"><strong>Editor:</strong> {{ post.editor.email }} ({{ post.editor.username }})</p>
               {% endif %}
-              <div class="mb-2" style="max-height: 200px; overflow-y: auto;">
-                <p class="mb-1 text-break" style="text-align: justify">
+                <div class="mt-0 mb-2" style="height: 190px; width: 400px;; overflow-y: auto; padding: 6px; border-radius: 6px; background: #d4cfbc;">
+                  <p class="text-break" style="text-align: justify">
                   {% if post.descripcion_editada %}
                     {{ post.descripcion_editada }}
                   {% else %}
