--- a/parroquiaproject/sitio/templates/base.html
+++ b/parroquiaproject/sitio/templates/base.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Mi sitio{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libertinus+Serif+Display&display=swap" rel="stylesheet">
@@ -25,18 +26,7 @@
         font-style: italic;
         color:#525049
     }
-    .noticia-container {
-        width: 90%;       /* ancho por defecto en desktop */
-        margin: 0 auto;   /* centrado */
-        padding: 20px;    /* bordes internos */
-        }
 
-    @media (max-width: 768px) {
-        .noticia-container {
-            width: 100%;    /* ocupa todo el ancho en móviles */
-            padding: 1px;   /* menos padding para móviles */
-        }
-    }
         /* Aumentar tamaño de los links SOLO en móvil */
     @media (max-width: 992px) { /* breakpoint de Bootstrap para navbar colapsada */
     .navbar-nav .nav-link {
@@ -108,7 +98,7 @@
 </nav>
 
     <!-- Contenido principal -->
-    <main class="noticia-container">
+    <main class="container py-3">
         {% block content %}{% endblock %}
     </main>
 
