--- a/parroquiaproject/sitio/templates/registration/password_reset_confirm_custom.html
+++ b/parroquiaproject/sitio/templates/registration/password_reset_confirm_custom.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 {% load widget_tweaks %}
+{% load static %}
 
 {% block title %}Nueva contraseña{% endblock %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+{% endblock %}
 
 {% block content %}
 <div class="container">
