--- a/parroquiaproject/sitio/templates/base.html
+++ b/parroquiaproject/sitio/templates/base.html
@@ -66,26 +66,33 @@
             {% endif %}
             </ul>
 
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a href="/dashboard/" class="btn btn-outline-dark btn-sm me-1">
-                    <i class="bi bi-person-fill"></i>Perfil</a>
+            <!-- Navbar derecha: Perfil y sesión -->
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
+                <!-- Botón Perfil -->
+                <li class="nav-item mb-2 mb-lg-0">
+                    <a href="/dashboard/" class="btn btn-outline-dark btn-sm py-2 fs-lg d-flex align-items-center justify-content-center w-100 w-lg-auto">
+                        <i class="bi bi-person-fill me-1 fs-icon"></i> Perfil
+                    </a>
                 </li>
-            </ul>
 
-            <!-- Sesión -->
-            <div class="d-flex">
+                <!-- Botón Cerrar sesión / Iniciar sesión -->
                 {% if user.is_authenticated %}
-                    <form action="{% url 'logout' %}" method="post" class="mb-0">
+                <li class="nav-item mb-2 mb-lg-0 ms-lg-2">
+                    <form action="{% url 'logout' %}" method="post" class="d-flex mb-0">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-outline-dark btn-sm">
-                            <i class="bi bi-box-arrow-right"></i>Cerrar sesión</button>
+                        <button type="submit" class="btn btn-outline-dark btn-sm py-2 fs-lg d-flex align-items-center justify-content-center w-100 w-lg-auto">
+                            <i class="bi bi-box-arrow-right me-1 fs-icon"></i> Cerrar sesión
+                        </button>
                     </form>
+                </li>
                 {% else %}
-                    <a href="{% url 'login' %}" class="btn btn-outline-dark btn-sm">
-                        <i class="bi bi-box-arrow-left"></i>Iniciar sesión</a>
+                <li class="nav-item mb-2 mb-lg-0 ms-lg-2">
+                    <a href="{% url 'login' %}" class="btn btn-outline-dark btn-sm py-2 fs-lg d-flex align-items-center justify-content-center w-100 w-lg-auto">
+                        <i class="bi bi-box-arrow-left me-1 fs-icon"></i> Iniciar sesión
+                    </a>
+                </li>
                 {% endif %}
-            </div>
+            </ul>
         </div>
     </div>
 </nav>
@@ -107,7 +114,7 @@
             position: "top-end",
             showConfirmButton: false,
             timer: 2000,
-            timerProgressBar: true
+            timerProgressBar: true,    
         });
         </script>
         {% endfor %}
