--- a/parroquiaproject/sitio/templates/actividades.html
+++ b/parroquiaproject/sitio/templates/actividades.html
@@ -12,9 +12,9 @@
 <div>
   <h2>
     Actividades Vigentes
-    <button class="btn btn-success mt-2 mt-sm-0 float-end" title="Nueva Actividad"
+    <button class="btn btn-success mt-2 float-end" title="Nueva Actividad"
             data-bs-toggle="modal" data-bs-target="#formActividad">
-      ➕
+        <i class="bi bi-plus-lg"></i>
     </button>
   </h2>
 
@@ -60,7 +60,7 @@
       {% for actividad in actividades %}
         <div class="col-md-6 mb-4">
           <!-- Cada actividad ocupa media fila -->
-          <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative">
+          <div class="row g-0 border rounded overflow-hidden flex-md-row shadow-sm h-md-250 position-relative" style="background-color: #E8E3D0;">
             <div class="col p-4 d-flex flex-column position-static">
               <h3 class="mb-0">{{ actividad.titulo }}</h3>
               <div class="mb-1 text-body-secondary">Fecha: {{ actividad.dia }}</div>
@@ -92,7 +92,7 @@
                     role="img" xmlns="http://www.w3.org/2000/svg">
                   <title>Placeholder</title>
                   <rect width="100%" height="100%" fill="#55595c"></rect>
-                  <text x="50%" y="50%" fill="#eceeef" dy=".3em">Sin Imagen</text>
+                  <text x="30%" y="50%" fill="#eceeef" dy=".3em">Sin Imagen</text>
                 </svg>
               {% endif %}
             </div>
