Fix Actividades (chau imagen) Fix textos centrados

--- a/parroquiaproject/sitio/templates/iglesias.html
+++ b/parroquiaproject/sitio/templates/iglesias.html
@@ -187,7 +187,7 @@
     </div>
 
     {% empty %}
-      <p class="text-muted">No hay iglesias registradas.</p>
+      <p class="text-muted text-center">No hay iglesias registradas.</p>
     {% endfor %}
   </div>
 
