--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -219,7 +219,9 @@
       </div>
     </div>
     {% empty %}
-      <p class="text-muted text-center">No hay publicaciones todavía.</p>
+      <div class="col-12">
+        <p class="text-muted text-center">No hay publicaciones todavía.</p>
+      </div>
     {% endfor %}
   </div>
 </div>
