Add search button (actividades)

--- a/parroquiaproject/sitio/templates/inicio.html
+++ b/parroquiaproject/sitio/templates/inicio.html
@@ -46,14 +46,14 @@
     <div style="display: flex; gap: 1rem; flex-wrap: wrap; justify-content: center;">
       <!-- Spotify -->
       <iframe style="border-radius:12px; flex: 1 1 300px;"
-        src="https://open.spotify.com/embed/playlist/6sc0V02fkbMDw8X5deDuN2?utm_source=generator&theme=0"
+        src="https://open.spotify.com/embed/album/04lC1vZqhNtagn4zFB68Hp?utm_source=generator&theme=0"
         width="100%" height="152" frameborder="0"
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
         loading="lazy">
       </iframe>
       <!-- YouTube -->
       <iframe style="flex: 1 1 300px; height: 152px;"
-        src="https://www.youtube.com/embed/videoseries?list=PLbsXiQOTnFUmPJf_CNV3vtELkeIiF58e4"
+        src="https://www.youtube.com/embed/2shdcJPfnf0"
         width="100%" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen>
@@ -80,7 +80,7 @@
         <!-- Columna texto -->
         <div class="col-12 col-md-8 p-4 d-flex flex-column" style="background-color: #E8E3D0;">
           <h3 class="mb-2">{{ noticia.titulo }}</h3>
-          <p class="mb-2"><strong>Iglesia</strong> {{ noticia.iglesiaAsociada }}</p>
+          <p class="mb-2"><strong>Iglesia:</strong> {{ noticia.iglesiaAsociada }}</p>
 
           <!-- Descripción con altura fija -->
           <div class="mt-0 mb-2 descripcion">
